--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>jQuery和CSS3霓虹灯文字特效 - 站长素材</title>
+<title>喵喵喵</title>
 
-<script src="js/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 
 <style>
 body {
@@ -216,7 +216,7 @@ button:nth-child(3):hover{
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
 
-<script src="js/typed.min.js"></script>
+<script src="typed.min.js"></script>
 
 <div class="buttons">
   <button onClick="colorChange(colors[0][0],colors[0][1] )">Green</button>
