--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 body {
   height: 100vh;
   box-sizing: border-box;
-  background-image: url(/aa.gif);
+  background-image: url(qq.gif);
   display: flex;
   flex-direction: column;
   justify-content: center;
